// 基础定义

syntax = "proto3";
package rpc;

message Ident {
    int64 svrid = 1;
    int64 index = 2;
}

message Vector2 {
    float x = 1;
    float y = 2;
}

message Vector3 {
    float x = 1;
    float y = 2;
    float z = 3;
}

message Vector4 {
    float x = 1;
    float y = 2;
    float z = 3;
    float w = 4;
}

///////////////////////////////////////////////////////////////////
// only be used between proxy-server and game-server
message MsgBase {
    Ident player_id = 1;
    bytes msg_data = 2;
    repeated Ident player_client_list = 3;
    Ident hash_ident = 4;
}